fixed bg covers

--- a/angular5/src/app/mods/bike/cover/cover.component.css
+++ b/angular5/src/app/mods/bike/cover/cover.component.css
@@ -1,11 +1,16 @@
 .proride-cover { 
     background-size: contain;
     width: 100%;
-    height:300px;
     background-position: center 0;
     background-attachment: fixed;
     background-repeat: no-repeat;
 
+}
+
+@media (max-width: 576px) {
+    .proride-cover {
+        height: 150px;
+    }
 }
 
 .proride-bars {
